--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.0.4",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "jwt-decode": "^3.1.2",
